fix: remove scrollbar on assignment preview

--- a/src/App/Body/AssignmentPreview/AssignmentPreview.css
+++ b/src/App/Body/AssignmentPreview/AssignmentPreview.css
@@ -3,6 +3,11 @@
     flex-direction: column;
     overflow-x: hidden;
     overflow-y: scroll;
+    scrollbar-width: 0;
+}
+
+.AssignmentPreview::-webkit-scrollbar {
+    display: none;
 }
 
 .preview {
